--- a/pageStyle.css
+++ b/pageStyle.css
@@ -1,15 +1,35 @@
 html{
-margin: 0;
-padding: 0;
+	margin: 0;
+	padding: 25;
+	-webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
 }
+
 .boxlogin{
-border-radius: 4px; /*bordes redondeados*/
-margin: 100px auto;
-width: 320px;
--webkit-border-radius: 4px;
--moz-border-radius: 4px;
+	border-radius: 4px; /*bordes redondeados*/
+	margin: 100px auto;
+	width: 380px;
+	-webkit-border-radius: 4px;
+	-moz-border-radius: 4px;
+	font-size: 19px;
 }
+
+/*.boxlogin input[type="text"]{
+	width: 250px;
+}*/
+
 input[type="submit"]{
-margin-top: 16px;
+	margin-top: 16px;
 }
+
+.firstMsg{
+	font-size: 26px;
+	font-family: sans-serif;
+}
+
+.brand{
+	font-size: 26px;
+	font-family: sans-serif;
+}
+
 .error{color: #FF0000;}
